[gd_scene load_steps=5 format=2]

[ext_resource path="res://presets/theme/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/kenney_fontpackage/Fonts/Kenney Rocket Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://screen/scripts/SlashScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 5
outline_color = Color( 0.439216, 0.439216, 0.439216, 1 )
font_data = ExtResource( 2 )

[node name="Slash" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Canvas" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="Title Temp" type="Label" parent="Canvas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -396.0
margin_top = 143.0
margin_right = 396.0
margin_bottom = 223.0
custom_colors/font_color = Color( 0.113725, 0.596078, 0.188235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Rhythm Forest"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -387.0
margin_right = 116.0
margin_bottom = -100.0
custom_constants/separation = 10
alignment = 1

[node name="StartButton" type="Button" parent="Canvas/VBoxContainer"]
margin_top = 97.0
margin_right = 224.0
margin_bottom = 121.0
text = "Start"

[node name="SettingButton" type="Button" parent="Canvas/VBoxContainer"]
margin_top = 131.0
margin_right = 224.0
margin_bottom = 155.0
text = "Setting"

[node name="CreditButton" type="Button" parent="Canvas/VBoxContainer"]
margin_top = 165.0
margin_right = 224.0
margin_bottom = 189.0
text = "CREDIT"

[connection signal="pressed" from="Canvas/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="Canvas/VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
